2001-12-20  Release Manager

	* GCC 3.0.3 Released.

2001-12-12  Jason Merrill  <jason@redhat.com>

	* semantics.c (setup_vtbl_ptr): Always build a CTOR_INITIALIZER
	if we're in a template.

2001-12-08  John David Anglin  <dave@hiauly1.hia.nrc.ca>

	* semantics.c (simplify_aggr_init_exprs_r): Add DIRECT_BIND flag in
	call to build_aggr_init.
	* cp-tree.h (DIRECT_BIND): Document new use of DIRECT_BIND.

2001-12-05  Jason Merrill  <jason@redhat.com>

	* pt.c (push_tinst_level): No longer static.
	* cp-tree.h: Declare it.
	* optimize.c (expand_call_inline): Record template instantiation
	context.

	* rtti.c (create_pseudo_type_info): Set CLASSTYPE_INTERFACE_ONLY
	on the __*_type_info type if we haven't seen a definition.

2001-12-03  Hans-Peter Nilsson  <hp@bitrange.com>

	* decl.c (xref_basetypes): Don't use C99 construct in tag_code
	declaration and initialization.

2001-12-03  Kriang Lerdsuwanakij  <lerdsuwa@users.sourceforge.net>

	* mangle.c (write_expression): Handle CAST_EXPR, STATIC_CAST_EXPR,
	CONST_CAST_EXPR.
	* operators.def: Add CAST_EXPR, STATIC_CAST_EXPR, CONST_CAST_EXPR.

2001-12-03  Mumit Khan  <khan@nanotech.wisc.edu>

	PR c++/3394
	* decl.c (xref_basetypes): Handle attributes between 
	'class' and name.

2001-12-03  Jason Merrill  <jason@redhat.com>

	* class.c (finish_vtbls): Fill in BINFO_VPTR_FIELD in the
	immediate binfos for our virtual bases.

2001-11-29  Mark Mitchell  <mark@codesourcery.com>

	PR c++/3048
	* cp-tree.h (ovl_member): Remove.
	* decl2.c (merge_functions): Handle extern "C" functions 
	specially.
	* tree.c (ovl_member): Remove.

	PR c++/4842
	* class.c (get_basefndecls): Take an IDENTIFIER_NODE, not a
	FUNCTION_DECL, as input.
	(mark_overriders): Remove.
	(warn_hidden): Rework for the new ABI.

	PR c++/3471
	* call.c (convert_like_real): Do not build additional temporaries
	for rvalues of class type.

2001-11-20  Mark Mitchell  <mark@codesourcery.com>

	PR c++/3637
	* call.c (non_reference): Add documentation.